--- a/02-ToDo/src/main/resources/templates/records.html
+++ b/02-ToDo/src/main/resources/templates/records.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" />
 
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Records</title>
 </head>
 <body>
 
@@ -26,9 +26,3 @@
 	</tr>
 	</tbody>
 </table>
-
-
-
-
-</body>
-</html>
