--- a/04-03-DwarfWebsiteStatic/src/main/resources/templates/index.html
+++ b/04-03-DwarfWebsiteStatic/src/main/resources/templates/index.html
@@ -31,7 +31,7 @@
 </nav>
 <div class="jumbotron text-center">
 
-<h1>Home Page</h1>
+<h1 th:text="${numberOfDwarfs}">Home Page</h1>
 <h2></h2>
 <br />
 
