--- a/04-Toystory/src/main/resources/templates/toystory.html
+++ b/04-Toystory/src/main/resources/templates/toystory.html
@@ -22,10 +22,10 @@
       <a class="nav-link" href="/">Home</a>
     </li>
     <li class="nav-item active">
-      <a class="nav-link" href="/shrekmovie">Shrek</a>
+      <a class="nav-link" href="/shrekmovie/">Shrek</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/toystorymovie">ToyStory</a>
+      <a class="nav-link" href="/toystorymovie/">ToyStory</a>
     </li>
   </ul>
 </nav>
