--- a/01-ProductInventory/src/main/resources/templates/index.html
+++ b/01-ProductInventory/src/main/resources/templates/index.html
@@ -12,13 +12,13 @@
 		<a class="h2" th:href="@{/categories}">List Categories</a>
 	</div>
 	<div class="p-2">
-		<a class="h2" th:href="@{/categories/new}">Create Categories</a>
+		<a class="h2" th:href="@{/categories/new}">Create Category</a>
 	</div>
 	<div class="p-2">
 		<a class="h2" th:href="@{/products}">List Products</a>
 	</div>
 	<div class="p-2">
-		<a class="h2" th:href="@{/products/new}">Create Categories</a>
+		<a class="h2" th:href="@{/products/new}">Create Product</a>
 	</div>
 
 </div>
