--- a/01-ProductInventory/src/main/resources/templates/categories.html
+++ b/01-ProductInventory/src/main/resources/templates/categories.html
@@ -8,6 +8,21 @@
 <body>
 <div class="container text-center">
 	<div><h1>Category List</h1></div>
+	<div>
+		<table class="table table-bordered">
+			<thead class="thead-dark">
+				<tr>
+					<th>ID</th>
+					<th>Name</th>
+				</tr>
+			</thead>
+			<tbody>
+				<th:block th:each="category : ${listCategories}">
+				<tr>
+					<td>[[${category.id}]]</td>
+					<td>[[${category.name}]]</td>
+				</tr>
+				</th:block>	
 
 </div>
 </body>
